# sample_cpp

./: .gitignore  README.md
chemical/: report1.m  report2.m  test.m
fem-util/: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  doxyfile
fem-util/doc/: dashw-util-cpp.asta  dashw-util-cpp.asta.bak
fem-util/gtest-1.7.0/: .gitignore
fem-util/src/data/: CMakeLists.txt  cell.cpp  cell.hpp  face.cpp  face.hpp  material.cpp  material.hpp  matesolid.cpp  matesolid.hpp  mateuser1.cpp  mateuser1.hpp  mesh.cpp  mesh.hpp  meshinfo.cpp  meshinfo.hpp  mybool.hpp  node.cpp  node.hpp  object.cpp  object.hpp  value.cpp  value.hpp  xyz.cpp  xyz.hpp
fem-util/src/func/: CMakeLists.txt  func.cpp  func.hpp  gauss.cpp  gauss.hpp
fem-util/src/iodata/: CMakeLists.txt  iodata.cpp  iodata.hpp  iodatabdf.cpp  iodatafea.cpp  iodatavtk.cpp
fem-util/src/shellscript/: run.sh
fem-util/src/tool/: CMakeLists.txt  myexception.cpp  myexception.hpp  mymath.cpp  mymath.hpp  tool.hpp
fem-util/test/: .gitignore
fem-util/test/data/: CMakeLists.txt  cell_test.cc  face_test.cc  mesh_test.cc  meshinfo_test.cc  node_test.cc  object_test.cc  xyz_test.cc
fem-util/test/func/: 000acousticmesh.vtk  001acousticmesh.vtk  CMakeLists.txt  contact000.vtk  contact001.vtk  func_test.cc  makefile  pre.sh
fem-util/test/func/mesh_input/: stfem.txt  wbm1.txt  wbm2.txt
fem-util/test/iodata/: CMakeLists.txt  import.bdf  import.fea  import.vtk  iodata_test.cc  longfmt.bdf  smallfmt.bdf
fem-util/test/tool/: CMakeLists.txt  myexception_test.cc  mymath_test.cc
hypersonic/: CMakeLists.txt  Doxyfile  GPATH  GRTAGS  GTAGS  README.md  main.cpp
hypersonic/doc/: hypersonic.asta  hypersonic.mm
hypersonic/module/: .gitignore  CMakeLists.txt
hypersonic/module/include/: AirBehindShock.hpp  AirModel.hpp  BoundaryEquation.hpp  CUI.hpp  Calc.hpp  Data.hpp  HeatRatio.hpp  Output.hpp
hypersonic/module/src/: AirBehindShock.cpp  AirModel.cpp  BoundaryEquation.cpp  CUI.cpp  Calc.cpp  Data.cpp  HeatRatio.cpp  Output.cpp
hypersonic/module/t/: mainTest.cpp
hypersonic/module/t/include/: ABTest.hpp  AMTest.hpp  BETest.hpp  CalcTest.hpp  DataTest.hpp  HRTest.hpp
sample/: .cproject
sample-qt/: .gitignore
sample-qt/EchoClient/: EchoClient.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
sample-qt/EchoServer/: EchoServer.pro  mainwindow.cpp  mainwindow.ui
sample/src/: sample.cpp
